# mdow

./: .gitignore  .oxfmtignore  .oxlintrc.json  AGENTS.md  CLAUDE.md  README.md  components.json  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.web.json  turbo.json  vitest.config.ts
.claude/: settings.json  settings.local.json
.claude/skills/build-dist/: SKILL.md
.claude/skills/update-web-changelog/: SKILL.md
.codex/environments/: environment.toml
.depot/workflows/: ci.yml  release.yml
.github/workflows/: ci.yml  release.yml
.opencode/plans/: 1779015250377-mighty-squid.md  1780102838501-quick-meadow.md
apps/desktop/: .env.example  .gitignore  .oxlintrc.json  .prettierignore  components.json  electron-builder.yml  electron.vite.config.ts  package.json  tsconfig.node.json  tsconfig.web.json  vite.config.tauri.ts  vitest.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: fs_tree.rs  lib.rs  main.rs  models.rs  store.rs  watchers.rs
apps/native-mac/: Package.resolved  Package.swift
apps/web/: components.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  wrangler.jsonc
docs/: native-code-example.md
script/: build_and_run.sh  native_mac_bundle.sh  package_native_mac_beta.sh
src/main/: file-service.ts  folder-service.test.ts  folder-service.ts  index.ts  ipc.ts  menu.ts  store.test.ts  store.ts
src/preload/: index.ts
src/renderer/: index.html
(+427 files in other folders)
